--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-numpy
-matplotlib
-scikit-learn==1.4.2
+streamlit==1.32.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.3
+scikit-learn==1.3.2
 joblib==1.3.2
